[project]
name = "lczerolens"
version = "0.3.0"
description = "Interpretability for LeelaChessZero networks."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Yoann Poupart", email = "yoann.poupart@ens-lyon.org"},
]
requires-python = ">=3.9"
dependencies = [
    "datasets>=3.2.0",
    "einops>=0.8.0",
    "jsonlines>=4.0.0",
    "nnsight>=0.3.7",
    "onnx2torch>=1.5.15",
    "python-chess>=1.999",
    "scikit-learn>=1.6.1",
    "tensordict>=0.6.2",
    "typing-extensions>=4.12.2",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.10.0",
]

[dependency-groups]
dev = [
    "gdown>=5.2.0",
    "ipykernel>=6.29.5",
    "lczero-bindings",
    "nbconvert>=7.16.5",
    "onnxruntime>=1.20.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
demo = [
    "gradio>=5.12.0",
    "matplotlib>=3.10.0",
]
docs = [
    "nbsphinx>=0.9.6",
    "pandoc>=2.4",
    "plotly>=5.24.1",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
    "sphinx-charts>=0.2.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
]
scripts = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "pylatex>=1.4.2",
    "safetensors>=0.5.2",
    "wandb>=0.19.2",
]

[build]
target-dir = "build/dist"

[tool.uv]
default-groups = ["dev", "docs"]

[tool.uv.sources]
lczero-bindings = { git = "https://github.com/LeelaChessZero/lc0.git", rev = "dfcd1c314150b93125697491bef1221841443c18" }

[tool.ruff]
line-length = 119
target-version = "py311"
