[project]
name = "lczerolens"
version = "0.3.3"
description = "Interpretability for LeelaChessZero networks."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Yoann Poupart", email = "yoann.poupart@ens-lyon.org"},
]
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.2.0",
    "einops>=0.8.0",
    "jsonlines>=4.0.0",
    "nnsight>=0.3.7,<0.4.0",
    "onnx2torch>=1.5.15",
    "python-chess>=1.999",
    "scikit-learn>=1.6.1",
    "tensordict>=0.6.2",
    "typing-extensions>=4.12.2",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
homepage = "https://lczerolens.readthedocs.io/"
documentation = "https://lczerolens.readthedocs.io/"
source = "https://github.com/Xmaster6y/lczerolens"
issues = "https://github.com/Xmaster6y/lczerolens/issues"
releasenotes = "https://github.com/Xmaster6y/lczerolens/releases"

[project.optional-dependencies]
viz = [
    "matplotlib>=3.10.0",
]
backends = [
    "v-lczero-bindings>=0.31.2"
]

[dependency-groups]
dev = [
    "gdown>=5.2.0",
    "ipykernel>=6.29.5",
    "nbconvert>=7.16.5",
    "onnxruntime>=1.20.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "v-lczero-bindings>=0.31.2",
]
demo = [
    "gradio>=5.12.0",
    "matplotlib>=3.10.0",
    "v-lczero-bindings>=0.31.2",
]
docs = [
    "nbsphinx>=0.9.6",
    "pandoc>=2.4",
    "plotly>=5.24.1",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
    "sphinx-autoapi>=3.6.0",
    "sphinx-charts>=0.2.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
]
scripts = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "pylatex>=1.4.2",
    "safetensors>=0.5.2",
    "wandb>=0.19.2",
]

[build]
target-dir = "build/dist"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 119
target-version = "py311"
